// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exactly > allows Object.is equality where deep equality would normally be used 1`] = `
expected "spy" to be called with arguments: [ exactly<[object Object]> ]

Received: 

  1st spy call:

  Array [
-   exactly<[object Object]>,
+   Object {},
  ]


Number of calls: 1

`;

exports[`exactly > allows Object.is equality where deep equality would normally be used 2`] = `
expected "spy" to be called with arguments: [ not.exactly<[object Object]> ]

Received: 

  1st spy call:

  Array [
-   not.exactly<[object Object]>,
+   Object {},
  ]


Number of calls: 1

`;
